--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@domain.com
+title: 活下牙的博客
+email: 3376420002@qq.com
 author: GitHub User
 
 # Copyright setting
